feat: Ajout de l'authentification, amélioration des vues, génération des bilans et tests supplémentaires

--- a/comptes/templates/comptes/liste_clients.html
+++ b/comptes/templates/comptes/liste_clients.html
@@ -10,5 +10,6 @@
         <li>{{ client.nom }} - Solde: {{ client.solde }}</li>
         {% endfor %}
     </ul>
+    <a href="{% url 'ajouter_client' %}">Ajouter un nouveau client</a>
 </body>
 </html>
