--- a/comptes/templates/comptes/tableau_de_bord.html
+++ b/comptes/templates/comptes/tableau_de_bord.html
@@ -1,1 +1,24 @@
-tableau_de_bord.html
+{% extends 'base.html' %}
+
+{% block title %}Tableau de Bord{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+    <h1 class="mb-4">Tableau de Bord</h1>
+    <div class="card">
+        <div class="card-header">
+            Transactions Récentes
+        </div>
+        <ul class="list-group list-group-flush">
+            {% for transaction in transactions %}
+                <li class="list-group-item">
+                    <strong>{{ transaction.date|date:"d/m/Y H:i" }}</strong> - 
+                    {{ transaction.type_transaction }} de 
+                    <strong>{{ transaction.montant }}</strong> €
+                    pour {{ transaction.client.nom }}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+</div>
+{% endblock %}
