--- a/templates/base.html
+++ b/templates/base.html
@@ -15,9 +15,24 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{% url 'tableau_de_bord' %}">Mon Projet</a>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     {% if user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'tableau_de_bord' %}">Tableau de Bord</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'liste_clients' %}">Liste des Clients</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'enregistrer_transaction' %}">Enregistrer une Transaction</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'bilan_journalier' %}">Bilan Journalier</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Déconnexion</a>
                         </li>
