--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <title>{% block title %}Mon Application Django{% endblock %}</title>
     <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Custom CSS -->
     <style>
         body {
@@ -27,11 +29,15 @@
             text-decoration: none;
             font-size: 18px;
             color: #ddd;
-            display: block;
+            display: flex;
+            align-items: center;
         }
         .sidebar a:hover {
             background-color: #575d63;
             color: white;
+        }
+        .sidebar a .fas {
+            margin-right: 10px;
         }
         .content {
             margin-left: 250px;
@@ -47,16 +53,16 @@
 
     <!-- Sidebar -->
     <div class="sidebar">
-        <a class="navbar-brand text-center text-white mb-4" href="{% url 'tableau_de_bord' %}">Mon Projet</a>
+        <a class="navbar-brand text-center text-white mb-4" href="{% url 'tableau_de_bord' %}">Gestion des Dépots</a>
         <hr class="bg-secondary">
         {% if user.is_authenticated %}
-            <a href="{% url 'tableau_de_bord' %}">Tableau de Bord</a>
-            <a href="{% url 'liste_clients' %}">Liste des Clients</a>
-            <a href="{% url 'enregistrer_transaction' %}">Enregistrer une Transaction</a>
-            <a href="{% url 'bilan_journalier' %}">Bilan Journalier</a>
-            <a href="{% url 'logout' %}">Déconnexion</a>
+            <a href="{% url 'tableau_de_bord' %}"><i class="fas fa-tachometer-alt text-primary"></i> Tableau de Bord</a>
+            <a href="{% url 'liste_clients' %}"><i class="fas fa-users text-success"></i> Liste des Clients</a>
+            <a href="{% url 'enregistrer_transaction' %}"><i class="fas fa-exchange-alt text-warning"></i> Enregistrer une Transaction</a>
+            <a href="{% url 'bilan_journalier' %}"><i class="fas fa-chart-line text-info"></i> Bilan Journalier</a>
+            <a href="{% url 'logout' %}"><i class="fas fa-sign-out-alt text-danger"></i> Déconnexion</a>
         {% else %}
-            <a href="{% url 'login' %}">Connexion</a>
+            <a href="{% url 'login' %}"><i class="fas fa-sign-in-alt text-primary"></i> Connexion</a>
         {% endif %}
     </div>
 
