--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -57,6 +57,10 @@
         .form-group .form-control {
             flex-grow: 1;
         }
+        .error {
+            color: red;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -64,6 +68,11 @@
         <h2>Connexion</h2>
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
+            {% if form.errors %}
+                <div class="error">
+                    <p>Nom d'utilisateur ou mot de passe incorrect.</p>
+                </div>
+            {% endif %}
             <div class="form-group">
                 <label for="username">Nom d'utilisateur :</label>
                 <input type="text" name="username" class="form-control" required>
