--- a/templates/base.html
+++ b/templates/base.html
@@ -12,39 +12,44 @@
     <style>
         body {
             display: flex;
-            height: 100vh;
-            overflow: hidden;
             flex-direction: column;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f2f5;
         }
         .header {
             width: 100%;
-            background-color: #343a40;
-            color: white;
-            padding: 10px 20px;
+            padding: 20px;
+            background-color: #3498db;
+            color: #ffffff;
             display: flex;
             justify-content: space-between;
             align-items: center;
         }
+        .header-title {
+            font-size: 20px;
+        }
         .sidebar {
-            height: calc(100vh - 60px);
+            height: calc(100vh - 80px); /* Ajuster la hauteur pour tenir compte de la hauteur du header */
             width: 250px;
             position: fixed;
-            top: 60px;
+            top: 80px; /* Positionner en dessous du header */
             left: 0;
-            background-color: #343a40;
+            background-color: #2c3e50;
             padding-top: 20px;
+            color: #ecf0f1;
         }
         .sidebar a {
             padding: 15px;
             text-decoration: none;
             font-size: 18px;
-            color: #ddd;
+            color: #ecf0f1;
             display: flex;
             align-items: center;
         }
         .sidebar a:hover {
-            background-color: #575d63;
-            color: white;
+            background-color: #34495e;
+            color: #ecf0f1;
         }
         .sidebar a .fas {
             margin-right: 10px;
@@ -54,6 +59,8 @@
             padding: 20px;
             width: calc(100% - 250px);
             overflow: auto;
+            background-color: #ecf0f1;
+            height: calc(100vh - 80px); /* Ajuster la hauteur pour tenir compte de la hauteur du header */
         }
     </style>
     <!-- HTMX -->
@@ -62,14 +69,17 @@
 <body>
     <!-- Header -->
     <div class="header">
-        <a class="navbar-brand text-white" href="{% url 'tableau_de_bord' %}">Gestion des Dépots</a>
+        <div class="header-title">
+            {% block header_title %}Mon Application Django{% endblock %}
+        </div>
         {% if user.is_authenticated %}
-            <span>Bienvenue, {{ user.username }}</span>
+            <span>Bienvenue, {{ user.username }}!</span>
         {% endif %}
     </div>
 
     <!-- Sidebar -->
     <div class="sidebar">
+        <a class="navbar-brand text-center mb-4" href="{% url 'tableau_de_bord' %}">Gestion des Dépots</a>
         <hr class="bg-secondary">
         {% if user.is_authenticated %}
             <a href="{% url 'tableau_de_bord' %}"><i class="fas fa-tachometer-alt text-primary"></i> Tableau de Bord</a>
