--- a/transactions/templates/transactions/bilan_journalier.html
+++ b/transactions/templates/transactions/bilan_journalier.html
@@ -6,9 +6,19 @@
 <div class="container mt-4">
     <h1 class="mb-4">Bilan Journalier</h1>
     <form method="get" class="mb-4">
-        <div class="form-group">
-            <label for="date">Sélectionnez une date :</label>
-            <input type="date" id="date" name="date" class="form-control" value="{{ selected_date|date:"Y-m-d" }}">
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="date">Sélectionnez une date :</label>
+                <input type="date" id="date" name="date" class="form-control" value="{{ selected_date|date:"Y-m-d" }}">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="start_date">Date de début :</label>
+                <input type="date" id="start_date" name="start_date" class="form-control" value="{{ start_date }}">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="end_date">Date de fin :</label>
+                <input type="date" id="end_date" name="end_date" class="form-control" value="{{ end_date }}">
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Afficher le Bilan</button>
     </form>
@@ -41,7 +51,7 @@
                         <td>{{ transaction.date|date:"d/m/Y H:i" }}</td>
                         <td>{{ transaction.type_transaction }}</td>
                         <td>{{ transaction.montant }} FCFA</td>
-                        <td><a href="{% url 'detail_client' transaction.client.identifiant_unique %}" > {{ transaction.client.nom }}</a></td>
+                        <td><a href="{% url 'detail_client' transaction.client.identifiant_unique %}">{{ transaction.client.nom }}</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
