--- a/transactions/templates/transactions/bilan_journalier.html
+++ b/transactions/templates/transactions/bilan_journalier.html
@@ -4,33 +4,35 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1 class="mb-4">Bilan</h1>
+    <h1 class="mb-4 text-center">Bilan</h1>
     <form method="get" class="mb-4" id="bilan-form">
-        <div class="form-group">
-            <label for="bilan_type">Type de Bilan :</label>
-            <select id="bilan_type" name="bilan_type" class="form-control" onchange="toggleDateFields()">
-                <option value="journalier" {% if not start_date and not end_date %}selected{% endif %}>Journalier</option>
-                <option value="periode" {% if start_date and end_date %}selected{% endif %}>Par Période</option>
-            </select>
-        </div>
-        <div class="form-row" id="date_fields">
-            <div class="form-group col-md-4" id="date_field">
+        <div class="form-row align-items-end">
+            <div class="form-group col-md-3">
+                <label for="bilan_type">Type de Bilan :</label>
+                <select id="bilan_type" name="bilan_type" class="form-control" onchange="toggleDateFields()">
+                    <option value="journalier" {% if not start_date and not end_date %}selected{% endif %}>Journalier</option>
+                    <option value="periode" {% if start_date and end_date %}selected{% endif %}>Par Période</option>
+                </select>
+            </div>
+            <div class="form-group col-md-3" id="date_field">
                 <label for="date">Sélectionnez une date :</label>
                 <input type="date" id="date" name="date" class="form-control" value="{{ selected_date|date:"Y-m-d" }}">
             </div>
-            <div class="form-group col-md-4" id="start_date_field" style="display: none;">
+            <div class="form-group col-md-3" id="start_date_field" style="display: none;">
                 <label for="start_date">Date de début :</label>
                 <input type="date" id="start_date" name="start_date" class="form-control" value="{{ start_date }}">
             </div>
-            <div class="form-group col-md-4" id="end_date_field" style="display: none;">
+            <div class="form-group col-md-3" id="end_date_field" style="display: none;">
                 <label for="end_date">Date de fin :</label>
                 <input type="date" id="end_date" name="end_date" class="form-control" value="{{ end_date }}">
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Afficher le Bilan</button>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary mt-3">Afficher le Bilan</button>
+        </div>
     </form>
     <div class="card mb-4">
-        <div class="card-header">
+        <div class="card-header bg-primary text-white">
             Résumé des Transactions
         </div>
         <div class="card-body">
@@ -39,12 +41,12 @@
         </div>
     </div>
     <div class="card">
-        <div class="card-header">
-            Transactions du Jour
+        <div class="card-header bg-primary text-white">
+            Transactions
         </div>
         <div class="card-body">
             <table class="table table-striped">
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th scope="col">Date</th>
                         <th scope="col">Type</th>
@@ -89,11 +91,9 @@
     }
 
     document.addEventListener('DOMContentLoaded', function() {
-        // Initial call to set the correct fields visibility based on the current selection
         toggleDateFields();
     });
 
-    // Reset the form fields after submission
     document.getElementById('bilan-form').addEventListener('submit', function() {
         var bilanType = document.getElementById('bilan_type').value;
 
